...
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="50"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_view_jobs_for_your_profile"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="50"
                        android:background="@drawable/btn_square_menu"
                        android:text="ViewJobs profile jobs"
                        android:textColor="#06bebd" />

                    <Button
                        android:id="@+id/btn_profile"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
...
