...
    <string name="share_job">Share</string>
    <string name="menu_provider">Menu</string>
    <string name="menu_seeker">Menu</string>
    <string name="viewjobs_profile_jobs">ViewJobs profile jobs</string>
    <string name="profile_seeker">Profile</string>
    <string name="view_all_jobs">View All Jobs</string>
    <string name="ratings_seeker">Ratings</string>
    <string name="view_your_pending_applications">View your pending applications</string>
    <string name="view_shared_jobs">View Shared Jobs</string>
    <string name="employees">Employees</string>
    <string name="jobs_offered">Jobs Offered</string>
    <string name="attitude_provider">Attitude:</string>
    <string name="punctuality">Punctuality:</string>
...
    <string name="attitude_seeker">Attitude:</string>
    <string name="helpfulness_seeker">Helpfulness:</string>
    <string name="quality_of_work_environment_seeker">Quality of work environment:</string>
    <string name="comment_150_characters_max_seeker">Comment (150 characters max):</string>
    <string name="submit_seeker">Submit</string>
    <string name="rating_menu_seeker">Rating Menu</string>
    <string name="rate_a_job_provider">Rate a job provider</string>
    <string name="view_my_ratings_seeker">View My Ratings</string>
    <string name="my_ratings_seeker">My Ratings</string>
    <string name="average_rating_seeker">Average rating:</string>
    <string name="attitude_seeker_rating">Attitude:</string>
    <string name="punctuality_seeker_rating">Punctuality:</string>
    <string name="cleanliness_seeker_rating">Cleanliness:</string>
...
